--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: azure;
     font-family: 'Rubik', sans-serif;
+    overflow: hidden;
 }
 .otp-container{
     display: flex;
