--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ input[type=number]::-webkit-inner-spin-button {
     margin-bottom: 9.5rem;
     border: 2px solid white;
   }
-  #verify1:focus, #verify2:focus, .my-btn:focus{
+   #verify1:focus, #verify2:focus, .my-btn:focus, #verify1:hover, #verify2:hover, .my-btn:hover {
     background-color: red;
     color: white;
     border: 2px solid white;
