--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: azure;
+    background-color: #f5f5f5;
     font-family: 'Rubik', sans-serif;
     overflow: hidden;
 }
@@ -15,14 +15,14 @@ input[type=number]::-webkit-inner-spin-button {
 .digit-group input {
     width: 40px;
     height: 50px;
-    background-color: azure;
+    background-color: white;
     border: 1px solid black;
     border-radius: 5px;
     line-height: 50px;
     text-align: center;
     font-size: 24px;
     font-family: "Raleway", sans-serif;
-    font-weight: 200;
+    font-weight: bold;
     color: black;
     margin: 0 2px;
   }
@@ -69,9 +69,9 @@ input[type=number]::-webkit-inner-spin-button {
   .para{
     color: white;
     font-weight: bolder;
-    background-color: #154afa;
+    background-color: blue;
     border-radius: 1rem;
-    padding: 6px;
+    padding: 8px;
     font-size: 9px;
     border: 2px solid white;
   }
@@ -92,6 +92,10 @@ input[type=number]::-webkit-inner-spin-button {
     color: white;
     border: 2px solid white;
   }
+  input{
+    font-weight: bolder;
+    background-color: white;
+  }
 
   @media screen and (max-width: 768px) {
     .mobile-cont{
@@ -99,7 +103,8 @@ input[type=number]::-webkit-inner-spin-button {
     }
     /* styles for screens with a maximum width of 768px */
       body {
-        background-image: url("./otp_verify.jpg");
+        /* background-image: url("./otp_verify.jpg"); */
+        background-color: white;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -126,5 +131,12 @@ input[type=number]::-webkit-inner-spin-button {
       font-size: 8px;
       margin-left: 1rem;
       margin-right: 1rem;
+      background-color: red;
+    }
+    .my-btn{
+      margin-bottom: 1rem;
+    }
+    .para-div{
+      margin-bottom: 2rem;
     }
   }
