--- a/style.css
+++ b/style.css
@@ -97,6 +97,31 @@ input[type=number]::-webkit-inner-spin-button {
     background-color: white;
   }
 
+
+  .loader {
+    border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid blue;
+    border-right: 6px solid green;
+    border-bottom: 6px solid red; /* Blue */
+    border-left: 6px solid yellow;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    position:absolute;
+    top: 60%;
+    left: 45%;
+  }
+
+  .hidden{
+    display: none;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
   @media screen and (max-width: 768px) {
     .mobile-cont{
       display:block;
