--- a/style.css
+++ b/style.css
@@ -101,9 +101,9 @@ input[type=number]::-webkit-inner-spin-button {
   .loader {
     border: 6px solid #f3f3f3; /* Light grey */
     border-top: 6px solid blue;
-    border-right: 6px solid green;
+    border-right: 6px solid blue;
     border-bottom: 6px solid red; /* Blue */
-    border-left: 6px solid yellow;
+    border-left: 6px solid red;
     border-radius: 50%;
     width: 50px;
     height: 50px;
